--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,12 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "dcatadmin2",
-            "email": "admin@dcatadmin.com"
+            "name": "dongasai",
+            "email": "1514582970@qq.com"
         }
     ],
     "require": {
-        "php": "^8.1",
-        "laravel/framework": "^10.0|^11.0",
+        "laravel/framework": "*",
         "dongasai/dcat-admin2": "11.*"
     },
     "require-dev": {
