docs(README): 更新文档以支持模块独立开发和发布
- 添加开发环境设置指南，包括作为独立模块开发的步骤
- 补充模块安装、启用、迁移和种子命令说明
- 新增发布模块到 Packagist 的步骤
- 更新 composer.json 文件，将类型改为 laravel-module

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "dcatadmin2/module-dcatadmin_demo",
     "description": "Dcat Admin Demo Module - A comprehensive demonstration module for Dcat Admin",
-    "type": "library",
+    "type": "laravel-module",
     "keywords": ["laravel", "dcat-admin", "module", "demo"],
     "license": "MIT",
     "authors": [
