--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
         }
     ],
     "require": {
-        "laravel/framework": "*",
-        "dongasai/dcat-admin2": "11.*"
+        "dongasai/dcat-admin2": "11.*",
+        "joshbrw/laravel-module-installer": "^2.0",
+        "laravel/framework": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
@@ -36,7 +37,10 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "joshbrw/laravel-module-installer": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
