feat(module): 添加 Dcat Admin Demo 模块基础结构
- 新增 .env.example 文件，包含模块默认环境变量配置
- 更新 composer.json，添加模块初始化脚本
- 创建数据库迁移和种子文件，初始化示例数据
- 添加 start.sh 脚本，简化模块启动和初始化流程

--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "laravel/framework": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
-        "orchestra/testbench": "^8.0|^9.0"
+        "orchestra/testbench": "^9.14",
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
@@ -41,6 +41,15 @@
         "allow-plugins": {
             "joshbrw/laravel-module-installer": true
         }
+    },
+    "scripts": {
+        "module_init": [
+            "@php -r \"if (!file_exists('.env')) { copy('.env.example', '.env'); echo 'Created .env file from .env.example\\n'; } else { echo '.env file already exists\\n'; }\"",
+            "@php -r \"if (!file_exists('database/database.sqlite')) { if (!is_dir('database')) mkdir('database', 0755, true); touch('database/database.sqlite'); echo 'Created database/database.sqlite\\n'; } else { echo 'database/database.sqlite already exists\\n'; }\"",
+            "@php -r \"if (file_exists('.env') && !strpos(file_get_contents('.env'), 'APP_KEY=') !== false) { echo 'Generating application key...\\n'; }\"",
+            "vendor/bin/testbench key:generate --ansi",
+            "vendor/bin/testbench migrate --seed --ansi"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true
